package prev;

public interface Catalog {
    void add(Object number, Object surname);

    void get(Object surname);

    void print();
}
