package prev;

public interface FruitList {
    void add(Object nameOfFruit);

    boolean remove(Object nameOfFruit);

    void findUnique();

    void repeatWords();
}
